# ReflectoLearn

./: .gitignore  1.con  1.k01  1.kon  1.rft  CONTRIBUTING.md  C__FT02_1.clc  GEMINI.md  README.md  config.yaml  config.yml  main.py  model.pth  multilayer.py  predict_main.py  pyproject.toml  requirements.txt  sample.txt  simulate_xrd.py  test.py  train_main.py
con_test/: test.py
con_test/ok_float_short/: 1.con  1.kon  1.out  LSFIT.OPT
con_test/ok_large_float/: 1.con  1.kon  1.out  LSFIT.OPT
con_test/ok_scientific_neg_exp/: 1.con  lserror.out
con_test/ok_scientific_small/: 1.con
con_test/tiny_float/: 1.clc  1.con  1.kon  1.out  LSFIT.OPT
con_test/too_large_float/: 1.con  1.kon  1.out  LSFIT.OPT
con_test/too_long_scientific/: 1.con
configs/: config.yaml
configs/train/: classify.yaml
lsfit_software/: 1.bar  1.clc  1.con  1.kon  1.out  1.par  C__FT01_1.clc  L  LSFIT.OPT  PS  Phobic TolueneRaw.txt  lserror.out
models/: cnn_simulation_model.pth  mlp_model.pth
notebook/: validate.ipynb
notebooks/: FFT_multi_Gaussian_fitting_routine.ipynb  comb.ipynb  data_exploration.ipynb  fitting.ipynb  fitting_251103.ipynb  fitting_251104.ipynb  model_prototyping.ipynb  multi_layer_fft_fitting.ipynb  noise.ipynb  simulate.ipynb
results/models/: hybrid__q4__seed42__lr1e-03.pt  hybrid__raw__seed42__lr1e-03.pt  hybrid_seed42_lr0.001_lose1.0813_data-q4.pt  regressor2__raw__seed42__lr1e-03.pt
results/scaler/: hybrid__q4__seed42__lr1e-03.scaler.pkl  hybrid__raw__seed42__lr1e-03.scaler.pkl  regressor2__raw__seed42__lr1e-03.scaler.pkl
results/stats/: hybrid__q4__seed42__lr1e-03.stats.npz  hybrid__raw__seed42__lr1e-03.stats.npz  regressor2__raw__seed42__lr1e-03.stats.npz
scripts/: config.py  data_structure.py  device.py  list_code.py  run_classify.py  run_evaluating.py  run_inference.py  run_preprocessing.py  run_simulate.py  run_training.py  run_training2.py  run_training_with_features.py  run_training_with_gaussian.py
src/: 1.b01  1.bar  1.clc  1.con  1.kon  1.out  1.par  C  C__FT01_1.clc  C__FT02_1.clc  C__FT03_1.clc  LSFIT.OPT  S  XRR main.py  loader.py  lserror.out  lsfit_wrapper.py  model.py  model_manager.py  noise.py  preprocess.py  read.py  save.py  simulate.py  train.py  wrap.py
src/reflectolearn/: config.py  device.py  functional.py  io.py  logger.py  math_utils.py  types.py  visualization.py
src/reflectolearn/classify/: data.py  evaluate.py  model.py  simulate.py  train.py
src/reflectolearn/config/: __init__.py  config.py  definitions.py
src/reflectolearn/data_processing/: fitting.py  preprocess.py  simulate.py
src/reflectolearn/io/: read.py  save.py
src/reflectolearn/models/: classifier.py  model.py  multi_branch.py
src/reflectolearn/physical/: fitting.py
src/reflectolearn/processing/: fitting.py  simulate.py
src/reflectolearn/regress/: data.py  evaluate.py  model.py  simulate.py  train.py
src/reflectolearn/training/: evaluate.py  train.py
