[project]
name = "reflectolearn"
version = "0.1.1"
description = "Machine learning tools for X-ray reflectivity analysis"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Isaac Yong", email = "isaacyong@naver.com" }
]

license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matplotlib",
    "PyYAML",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
    "refnx",
    "h5py",
    "ipykernel",
    "pydantic",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".git", "__pycache__", ".venv", ".eggs", "build", "dist"]

extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # PEP8 errors
    "W",   # PEP8 warnings
    "F",   # Pyflakes
    "I",   # Import 정렬
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # 긴 줄 허용
    "B008",  # 인자 기본값에 함수 호출 허용
]

[tool.ruff.lint.isort]
known-first-party = ["reflectolearn"]

