[project]
name = "reflectolearn"
version = "0.1.2"
description = "Machine learning tools for X-ray reflectivity analysis"
readme = "README.md"
requires-python = "==3.12.*"

authors = [
    {name = "Isaac Yong", email = "isaacyong@naver.com"}
]

license = { text = "MIT" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matplotlib",
    "PyYAML",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "tqdm",
    "refnx",
    "h5py",
    "ipykernel",
    "pydantic",
    "loguru",
    "torch"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
]

[tool.ruff]
line-length = 150
target-version = "py312"
exclude = [".git", "__pycache__", ".venv", ".eggs", "build", "dist"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # PEP8 errors
    "W",   # PEP8 warnings
    "F",   # Pyflakes
    "I",   # Import Order
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["reflectolearn"]
combine-as-imports = true
